WIP: 2025-12-10 21:40:59